ch3/sect1 ok + début algo vérif ER

--- a/newcommand.tex
+++ b/newcommand.tex
@@ -11,6 +11,7 @@
 \newcommand\R{{\cal R}}
 \newcommand\I{{\cal I}}
 \renewcommand\O{{\cal O}}
+\newcommand\Q{{\cal Q}}
 \newcommand\X{{\cal X}}
 \newcommand\C{{\cal C}}
 \newcommand\D{{\cal D}}
@@ -27,6 +28,9 @@
 \newcommandx{\wbLS}[3][1=i,2=t_1,3=t_2]{\underline{w}_{LS}(#1,#2,#3)}
 \newcommandx{\wbRS}[3][1=i,2=t_1,3=t_2]{\underline{w}_{RS}(#1,#2,#3)}
 \newcommandx{\wbCS}[3][1=i,2=t_1,3=t_2]{\underline{w}_{CS}(#1,#2,#3)}
+\newcommandx{\bbLS}[3][1=i,2=t_1,3=t_2]{\underline{b}_{LS}(#1,#2,#3)}
+\newcommandx{\bbRS}[3][1=i,2=t_1,3=t_2]{\underline{b}_{RS}(#1,#2,#3)}
+\newcommandx{\bbCS}[3][1=i,2=t_1,3=t_2]{\underline{b}_{CS}(#1,#2,#3)}
 
 \newcommandx{\Em}[1][1=2n]{\E\setminus\{#1\}}
 \newcommand\E{{\cal E}}
