--- a/part3/CECSP/PLNE_CECSP.tex
+++ b/part3/CECSP/PLNE_CECSP.tex
@@ -1,5 +1,5 @@
 \chapter[Modèles pour le \CECSP~et renforcement des modèles]{Programmation linéaire pour le \CECSP~et renforcement des modèles}
-
+\label{sec:PLNE_CECSP}
 
 
 
