--- a/part2/CECSP/time_filter.tex
+++ b/part2/CECSP/time_filter.tex
@@ -446,7 +446,7 @@ Considérons les deux activités suivantes:
     act & \ES & \LE & W_i & \bmin & \bmax & f_i(b_i(t))  \\
     \hline
    i & 0 & 14 & 28 & 2 & 3 & 2*b_i(t) +1\\
-   j & 2 & 20 & 49 & 2 & 4 & voir fig~\ref{fig:fonct_ CECSP}\\
+   j & 2 & 20 & 49 & 2 & 4 & voir fig~\ref{fig:fonct_CECSP}\\
     \hline
   \end{tabular}
 \end{center}
@@ -525,7 +525,7 @@ avant  $t > \min{moi_i}$.
       {$\bmax[j]$} ;
     \end{tikzpicture}
    }
-    \subcaptionbox{$\ES[j]$ peut être ajusté\label{fig:disj_CECSPc}}[\linewidth]{    \centering
+    \subcaptionbox{$\ES[j]$ peut être ajusté\label{fig:RDR_CECSPc}}[\linewidth]{    \centering
       \begin{tikzpicture} [yscale=0.4,xscale=0.4]
       \node (O) at (0,0) {};
       \foreach \i in {1,...,14} {
@@ -557,7 +557,7 @@ avant  $t > \min{moi_i}$.
   \end{tikzpicture}
 }
   \caption{Raisonnement disjonctif restreint pour le \CECSP.}
-  \label{fig:disj_CECSP}
+  \label{fig:RDR_CECSP}
 \end{figure}
 \end{ex}
 
@@ -633,7 +633,7 @@ Considérons les deux activités suivantes:
        % \draw[densely dotted] (6,-0.1) -- (6,5.5) node[above] {$\ES[j]^{'}$};
       % \draw[->] (1.8,5.8) -- (5.2,5.8);  
     \end{tikzpicture}
-    \caption{Illustration du Time-Tabe disjonctif}
+    \caption{Illustration du Time-Table disjonctif}
     \label{fig:TTDR_CUSP}
   \end{figure}
 L'intervalle $moi_i=[4,8]$ est complètement inclus dans l'intervalle
@@ -644,6 +644,158 @@ de ressource, ne peuvent se chevaucher l'intervalle $[4,8]$. Donc
 $\ES[j]$ peut être ajuster à $5$. 
 \end{ex}
 
+Certains raisonnements mis en place dans le cadre du \CUSP~peuvent
+donc être facilement adaptés au cas du \CECSP~en considérant des
+activités rectangulaires de durée ou de consommation
+minimale. Cependant, ces règles ne prenant en considération que des
+cas ``extrêmes'', elles demeurent moins efficaces que dans le cas du
+\CUSP. C'est pourquoi, dans le paragraphe~\ref{sec:RE_CECSP}, nous
+avons choisi d'adapter un des raisonnements les plus forts pour le
+\CUSP dans le cadre du \CECSP: le raisonnement énergétique.
+
+Le prochain paragraphe présente quant à lui un raisonnement couplant
+modélisation de problème de flots et Time-Table. 
+
 \subsection{Le Time-Table basé sur les flots}
 
+Le raisonnement décrit dans ce paragraphe propose d'intégrer le
+raisonnement Time-Table dans un programme linéaire basé sur un
+problème de flots. Ce programme linéaire peut ensuite être utilisé
+comme algorithme de vérification, ou checker, pour s'assurer que les
+valeurs des domaines des variables ne vont pas amener à une
+incohérence. Il peut aussi être couplé avec des algorithmes de
+propagation tels que ceux décrits dans le paragraphe précèdent pour
+décrire un raisonnement complet. 
 
+L'idée de l'algorithme de vérification est donc de s'assurer que, une
+fois les parties obligatoires des activités fixées, l'aire disponible
+est suffisante pour ordonnancer le reste des activités en tenant
+compte des fenêtres de temps de chaque activité. Pour faire cela, nous
+allons, dans un premier temps, contraindre chaque activité à consommer
+une quantité de ressource supérieure à $\bmin$ dans l'intervalle
+$[\LS,\EE{[}$ et ensuite, nous relâchons la contrainte de consommation
+minimale en autorisant une activité à consommer une quantité de
+ressource comprise entre $0$ et $\bmax$ durant l'intervalle
+$[\ES,\LE{]}$. Ceci peut être vu comme une variante de la relaxation
+préemptive du \CECSP, décrite dans le chapitre~\ref{ch:ordo}. 
+Clairement, comme il s'agit d'une relaxation du \CECSP, si aucune
+solution n'existe alors l'instance du \CECSP~correspondante
+ne possède pas de solutions. 
+
+Pour modéliser cette relaxation, nous introduisons $(t_q)_{q \in \Q}$,
+$| \Q | = 4*n$, la suite croissante des bornes des domaines des
+variables, i.e. $(t_q)$ est composée des dates de début au plus tôt et
+au plus tard ainsi que des dates de fin correspondantes. Pour
+simplifier les notations, nous notons $\Q^* $ l'ensemble $\Q
+\setminus{4*n}$ Nous définissons ensuite deux ensembles de
+variables. Le premier correspond à la quantité de ressource consommée 
+par une activité $i$ dans la période $[t_q,t_{q+1}[$ et est noté
+$b_{iq},\ i \in \A,\ q \in \Q^*$. Le second permet de modéliser la
+quantité d'énergie apportée à une activité dans cette même période et
+est noté $w_{iq},\ i \in \A,\ q \in \Q^*$. Le programme linéaire peut
+alors s'écrire de la manière suivante:
+\begin{align}
+  &\sum_{i \in \A} b_{iq} \le R(t_{q+1}- t_q) & & 
+  \forall q \in \Q^* \label{eq:flot1}\\
+  &b_{iq} \ge b_i^{min}(t_{q+1}-t_q) & & \forall i \in \A,
+  \ \forall q \in \Q^*\ | \ \LS \le t_q \le \EE \label{eq:flot2}\\
+  &b_{iq} \le b_i^{max} (t_{q+1} - t_q) & &
+  \forall i \in \A,\ \forall q \in \Q^* \label{eq:flot3}\\
+  &b_{iq}=0 & & \forall i \in \A, \ 
+  \forall q \in \Q^*\  |\ t_q \not\in [\ES,\LE{]} \label{eq:flot4}\\  
+  &w_{iq} \le a_{ip}b_{iq}+c_{ip}(t_{q+1}-t_q) & &
+  \forall i \in \A, \ \forall q \in \Q^*,\  \forall p \in \P_i \label{eq:flot5}\\
+  &w_{iq} \le Mb_{iq} & &
+  \forall i \in \A,\ \forall q \in \Q^*\ \label{eq:flot6}\\
+  &\sum_{q\in \Q^*} w_{iq} = W_i  & &
+  \forall i \in \A \label{eq:flot7}
+  \end{align}
+
+Dans cette formulation, la contrainte~\eqref{eq:flot1} permet
+d'assurer que la capacité de la ressource ne soit pas excédée. 
+
+La contrainte~\eqref{eq:flot2} modélise la partie
+obligatoire d'une activité. En effet, la contrainte affirme que
+l'activité doit consommée une quantité de ressource supérieure à
+$\bmin$ durant l'intervalle $[\LS,\EE{[}$.
+
+La contrainte~\eqref{eq:flot3}  garantit que l'activité ne consomme
+pas plus de $\bmax$ de la ressource durant son exécution. 
+
+La contrainte~\eqref{eq:flot4} fixe la consommation de la ressource à
+zéro en dehors de l'intervalle $[\ES,\LE{]}$.
+
+Les contraintes~\eqref{eq:flot5} et ~\eqref{eq:flot6} permettent de
+modéliser l’énergie apportée à l’activité $i$ en fonction de la
+quantité de ressource consommée par cette même activité dans
+l’intervalle $[t_q , t_{q+1}]$. Notons d’abord l’utilisation d’une
+inégalité dans la contrainte~\eqref{eq:flot5} et non d’une égalité. La
+justification de la validité de cette contrainte est faite dans la
+chapitre~\ref{sec:PLNE_CECSP}. La contrainte~\eqref{eq:flot6}
+stipule quant à elle que si l'activité ne consomme pas de ressource,
+i.e. $b_{iq}=0$, alors elle ne reçoit pas d'énergie, i.e. $w_{iq}=0$
+
+La contrainte~\eqref{eq:flot7} assure que la quantité d'énergie
+requise est bien apporté à l'activité. 
+
+Notons que le modèle possède $2 \times (n \times (4n - 1)\,) = 8n^2 -
+2n$ variables continues et au plus $4n^2(4+P) + n (1 -
+P) - 1$ contraintes, avec $P=\max_{i\in\A}|\P_i|$.
+
+\begin{ex}
+Considérons l'instance à $3$ activité et avec une ressource de
+capacité $R=3$ suivante:
+
+\begin{center}
+\begin{tabular}{|P{1cm}|P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{2cm}|}
+  \hline
+  act. & \ES & \LE & W_i & \bmin & \bmax & \LS & \EE & f_i(b_i(t))\\
+  \hline
+  1 & 0 & 2 & 4 & 2 & 2 & 0 & 2 & b_i(t)\\
+  2 & 4 & 6 & 4 & 2 & 2 & 4 & 6 & b_i(t)\\
+  3 & 0 & 6 & 10 & 1 & 2 & 1 & 5 & b_i(t)\\
+  \hline
+  \end{tabular}
+\end{center}
+Considérons maintenant le programme linéaire défini ci-dessus associé
+à cette instance. La suite $t_q$ est formée des six éléments suivants:
+$t_0=0,\ t_1=1,\ t_2=2,\ t_3=4,\ t_4=5,\ t_5=6$. Notons que, comme les
+fonctions de rendement correspondent à la fonction identité, la
+variable $w_{iq}$ n'a pas besoin d'être définie ici. Le programme
+linéaire est donc le suivant:
+\begin{align}
+&b_{3q} + 2 \le 3 & & q\neq 2 \tag{\ref{eq:flot1}a}\label{boundLP}\\
+&b_{32} \le 6 & & \tag{\ref{eq:flot1}b}\\
+&b_{10}=b_{11}=2 & & \tag{\ref{eq:flot2}a}\\
+&b_{23}=b_{24}=2 & & \tag{\ref{eq:flot2}b}\\
+&b_{32} \ge 2  & & \tag{\ref{eq:flot2}c}\\
+&b_{3q} \ge 1& & q=1,3\tag{\ref{eq:flot2}d}\\
+&b_{3q} \le 2 & & q=0,4\tag{\ref{eq:flot3}a}\\
+& b_{3q} \le 2 & & q=1,3\tag{\ref{eq:flot3}b} \\
+&b_{32} \le 4 & & \tag{\ref{eq:flot3}c}\label{maxLP}\\
+&b_{1q}=0 & & q=2..4\tag{\ref{eq:flot4}a}\\
+&b_{2q}=0 & & q=0..2\tag{\ref{eq:flot4}b}\\
+&b_{30}+b_{31}+b_{32}+b_{33}+b_{34}=10 & & \tag{\ref{eq:flot7}a}\label{resLP}
+\end{align}
+Comme la contrainte~\eqref{boundLP} borne $b_{3q}$ supérieurement par
+$1$ pour $q=0,1,3,4$, la contrainte \eqref{resLP} implique que
+$b_{32}=6$ ce qui est en contradiction avec la
+contrainte~\eqref{maxLP}. Le programme linéaire détecte donc
+l'infaisabilité de l'instance. Dans le paragraphe suivant, nous
+verrons que, pour cette instance, le raisonnement énergétique ne
+détecte pas d'incohérence. Notons aussi que le raisonnement Time-Table
+n'aurait pas détecté l'incohérence.
+\end{ex}
+
+Dans ce paragraphe, nous avons montré que certaines extensions des
+relaxations du \CUSP~était directement adaptable au cas du \CECSP. En
+effet, nous avons décrit l'extension des raisonnements Time-Table,
+disjonctif et Time-Table disjonctif. D'autres raisonnements existant
+font aussi partie de cette catégorie comme, par exemple, le
+Edge-Finding et ses extensions. Nous avons aussi montré que la
+programmation linéaire pouvait être utilisée pour décrire un
+algorithme de vérification qui pouvait être couplée à des algorithmes
+d'ajustements existants.
+
+Dans le paragraphe suivant nous décrivons une extension non triviale du
+raisonnement énergétique, un des raisonnements les plus forts pour le \CUSP.
